--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
        <div class="container">
               <div class="gallary">
-                <img src="burger.jpg"class=banner-area>
+                <img src="Burger.jpg"class=banner-area>
                 <a class="btn" role="buttun" href="sign up form.html">ADD</a>
                 <div class="description">PRICE: 450
                 	McRoyale
@@ -50,26 +50,26 @@
                     lettuce</div>
               </div>
               <div class="gallary">
-                <img src="pizza.jpg"class=banner-area>
+                <img src="Pizza.jpg"class=banner-area>
                 <a class="btn" role="buttun" href="sign up form.html">ADD</a>
                 <div class="description">Deal
                            Large Pizza + 1.5L Drink
                            Rs.1,499 Pizza is a dish of Italian origin consisting of a usually round, flat base of leavened wheat-based dough topped with tomatoes, cheese, </div>
               </div>
               <div class="gallary">
-                <img src="shwarma.jpg"class=banner-area>
+                <img src="Shwarma.jpg"class=banner-area>
                 <a class="btn" role="buttun" href="sign up form.html">ADD</a>
                 <div class="description">PRICE:220
                 People love shawarma because of how meaty it is while still being a healthy food to eat. The way the meat is grilled indeed added to that undeniably great taste. Moreover,</div>
               </div>
               <div class="gallary">
-                <img src="k.jpg"class=banner-area>
+                <img src="K.jpg"class=banner-area>
                 <a class="btn" role="buttun" href="sign up form.html">ADD</a>
                 <div class="description">PRICE: 650
                 Karahi curry is named after the steep-sided, wok-like pot in which this dish would traditionally be cooked</div>
               </div>
               <div class="gallary">
-                <img src="b.jpg"class=banner-area>
+                <img src="B.jpg"class=banner-area>
                 <a class="btn" role="buttun" href="sign up form.html">ADD</a>
                 <div class="description"> PRICE: 420
                 Biryani is a mixed rice dish originating among the Muslims of the Indian subcontinent. It is made with Indian spices, rice</div>
