--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width" intial-scale="1">
 	<title>MY Website</title>
 	<link rel="stylesheet" href="tahir.css">
 </head>
